set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/external/stm32-cmake/cmake")
set(STM32Cube_DIR "C:\\\\STM32CubeRepo\\Repository\\STM32Cube_FW_F3_V1.5.0")
set(STM32_LINKER_SCRIPT STM32F303VCTx_FLASH.ld)

cmake_minimum_required(VERSION 3.6)
project(can_test_f3d)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)

INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMSIS_INCLUDE_DIRS}
        ${STM32HAL_INCLUDE_DIR}
        Inc
)

FILE(GLOB_RECURSE PROJECT_SOURCES "Src/*.c")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})