set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/external/stm32-cmake/cmake")
set(STM32Cube_DIR "~/STM32Cube/Repository/STM32Cube_FW_F3_V1.7.0")
set(STM32_LINKER_SCRIPT STM32F303VCTx_FLASH.ld)

cmake_minimum_required(VERSION 3.6)
project(can_test_f3d)
ENABLE_LANGUAGE(ASM)

MACRO(HEADER_DIRECTORIES return_list)
    FILE(GLOB_RECURSE new_list Middlewares/*.h)
    SET(dir_list "")
    FOREACH(file_path ${new_list})
        GET_FILENAME_COMPONENT(dir_path ${file_path} PATH)
       SET(dir_list ${dir_list} ${dir_path})
    ENDFOREACH()
    LIST(REMOVE_DUPLICATES dir_list)
    SET(${return_list} ${dir_list})
ENDMACRO()

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL REQUIRED)

HEADER_DIRECTORIES(MIDDLE_DIRS)
INCLUDE_DIRECTORIES(
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMSIS_INCLUDE_DIRS}
        ${STM32HAL_INCLUDE_DIR}
        Inc
        ${MIDDLE_DIRS}
)

FILE(GLOB_RECURSE PROJECT_SOURCES "Src/*.c")
FILE(GLOB_RECURSE MIDDLE_SOURCES "Middlewares/*.c")

LIST(REMOVE_ITEM PROJECT_SOURCES "Src/system_stm32f3xx.c")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES} ${MIDDLE_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})